knowledge/kubernetes+docker/yaml/ms/msb-deployment-v1.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: msb
    version: v1
  name: msb-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msb
      version: v1
  template:
    metadata:
      labels:
        app: msb
        version: v1
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xms128m -Xmx256m -Djava.net.preferIPv4Stack=true -Djava.security.egd=file:///dev/./urandom
        - name: server.servlet.context-path
          value: /msb
        - name: REMOTE_URL
          value: http://msa:8080/msa
        image: istio-tutorial-ms:v1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/actuator/health
          initialDelaySeconds: 20
          periodSeconds: 5
          timeoutSeconds: 1
        name: msb
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        # - containerPort: 8778
        #   name: jolokia
        #   protocol: TCP
        # - containerPort: 9779
        #   name: prometheus
        #   protocol: TCP
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/actuator/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        securityContext:
          privileged: false
