knowledge/kubernetes+docker/yaml/ms/msa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: msa
  labels:
    app: msa    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: msa
