knowledge/kubernetes+docker/yaml/ms/msb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: msb
  labels:
    app: msb    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: msb
