knowledge/kubernetes+docker/yaml/ms/ms-virtualsevice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: msa-virtualservice
spec:
  hosts:  #For NodePort ingress gateways, access by a browser is supported partially: only for the * hosts in the definition of the VirtualService.
  # - "msa" 
  - "*"  # 通过istio ingressgateway暴露的端口访问
  gateways:
  - ms-gateway  # 这里一定要和gateway一致
  http:
  - match:
    - uri:
        prefix: /msa
    # - uri:
    #     prefix: /api  # 同一个应用暴露多个url
    route:
    - destination:
        port:
          number: 8080
        host: msa
#      timeout: 1s  # 这里设置一个超时1s，如果msb设置了delay超过1s，msa访问的时候就会报404了

  # - match:      # 如果要匹配多个应用的话，需要指定多个match
  #   - uri:
  #       prefix: /msb
  #   route:
  #   - destination:
  #       port:
  #         number: 8080
  #       host: msb
